--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -48,7 +48,7 @@
 
                         <p:menuitem 
                             ajax="false" 
-                            action="/opd_pre_bill"  
+                            action="#{opdPreBillController.navigateToBillingForCashierFromMenu()}"  
                             actionListener="#{opdPreBillController.prepareNewBill}" 
                             value="Billing for Cashier"
                             icon="fa fa-fw fa-cash-register"
