--- a/src/main/webapp/resources/ezcomp/patientDetail.xhtml
+++ b/src/main/webapp/resources/ezcomp/patientDetail.xhtml
@@ -12,12 +12,12 @@
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
-    <cc:implementation>
+    <cc:implementation >
         
-            <div class="row p-1">
+            <div class="row">
                 <div class="col-md-4 p-1">
 
-                    <p:selectOneMenu id="cmbTitle" value="#{cc.attrs.patient.person.title}" placeholder="Title" class="form-control w-100">
+                    <p:selectOneMenu id="cmbTitle"  placeholder="Title" class="form-control w-100">
                         <f:selectItem itemLabel="Select Title" />
                         <f:selectItems value="#{enumController.title}" />
                     </p:selectOneMenu>
@@ -26,7 +26,7 @@
                     <p:inputText autocomplete="off" id="txtNewPtName" value="#{cc.attrs.patient.person.name}" class="form-control w-100" style="width: 200px; text-transform: capitalize;" placeholder="Name"></p:inputText>
                 </div>
                 <div class="col-md-4 p-1">
-                    <p:selectOneMenu id="txtNewSex" value="#{cc.attrs.patient.person.sex}"  class="form-control w-100">
+                    <p:selectOneMenu id="txtNewSex" class="form-control w-100">
                         <f:selectItem itemLabel="Select Sex" />
                         <f:selectItems value="#{enumController.sex}" />
                     </p:selectOneMenu>
