--- a/src/main/webapp/resources/inward/bill/finalBill.xhtml
+++ b/src/main/webapp/resources/inward/bill/finalBill.xhtml
@@ -25,7 +25,7 @@
                 <div>
                     <div>
                         <div class="col-12 text-center">
-                            <h1 class="bg-danger"><h:outputLabel value="#{cc.attrs.bill.institution.name}" /></h1>
+                            <h1 class=""><h:outputLabel value="#{cc.attrs.bill.institution.name}" /></h1>
                             <h2><h:outputLabel value="#{cc.attrs.bill.institution.address}" /></h2>
                             <h3>#{cc.attrs.bill.institution.phone}</h3>
                             <h4>#{cc.attrs.bill.institution.fax}</h4>
@@ -56,7 +56,7 @@
                         <div class="row">
                             <div class="col-4 w-100 d-flex">
                                 <div class="d-flex justify-content-between w-100">
-                                    <div class="w-100 text-left">
+                                    <div class="w-100 text-right">
                                         <h:outputLabel value="B.H.T NO" />
                                     </div>
                                     <div class="text-right w-100 ">
